@@ -29,6 +29,7 @@ XAPIAN_SWIG_CS_SRCS=\
 	KeyMaker.cs \
 	LatLongCoord.cs \
 	LatLongCoords.cs \
+	LatLongCoordsIterator.cs \
 	LatLongMetric.cs \
 	MatchDecider.cs \
 	MatchSpy.cs \
@@ -45,7 +46,6 @@ XAPIAN_SWIG_CS_SRCS=\
 	Remote.cs \
 	RSet.cs \
 	SWIGTYPE_p_p_char.cs \
-	SWIGTYPE_p_std__setT_Xapian__LatLongCoord_t__const_iterator.cs \
 	SWIGTYPE_p_std__string.cs \
 	SWIGTYPE_p_std__vectorT_std__string_t.cs \
 	SWIGTYPE_p_std__vectorT_Xapian__Query_t.cs \
